infrastructure/gateway-api/config/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-hubble
  namespace: gateway-system
  labels:
    expose: yes
spec:
  ports:
    - name: port-80
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
