infrastructure/gateway-api/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: rajsingh-info
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http-rajsingh-info
    allowedRoutes:
      namespaces:
        from: All
  - name: https-rajsingh-info
    protocol: HTTPS
    port: 443
    hostname: "*.rajsingh.info"
    tls:
      certificateRefs:
      - name: wildcard-rajsingh-info-tls
    allowedRoutes:
      namespaces:
        from: All
